--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,17 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        subprojects {
+            afterEvaluate {
+                project ->
+                    if (project.hasProperty("android")) {
+                        android {
+                            compileSdkVersion = 28
+                            buildToolsVersion = "28.0.3"
+                        }
+                    }
+            }
+        }
     }
 }
 
